--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html1>
-<html lang = "pt-br">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset = "UTF-8">
-    <meta name = "viewport" content = "width=device-width,initial-scale=1.0"
-    <title> Meu primeiro repositório</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-    <h1>Olá, Mundo!</h1>
-    <hr>
-    <p>{% lorem 9 b random %}</p>
-    <p> que lorem é esse, cara?</p>
-</body> 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Asperiores doloremque consequatur alias atque dicta enim unde adipisci architecto dolores accusantium?
+         Eius debitis velit odio deserunt quo quia! Reprehenderit, quam magni.</p>
+    
+</body>
 </html>
-
-
 
 
 
